Fix form zoom in on IOS

--- a/assets/css/components/archive/components/_newsletter-signup.scss
+++ b/assets/css/components/archive/components/_newsletter-signup.scss
@@ -41,6 +41,8 @@
       input:focus {
         border-color: $dc-primary;
         --gf-local-shadow: none;
+        --gf-local-outline-color: none;
+        outline: none !important;
       }
 
       .gfield--type-submit {
@@ -49,7 +51,7 @@
 
       input[type="email"] {
         font-family: $dc-body;
-        font-size: 14px;
+        font-size: 16px !important;
         border-radius: 0;
         padding: 15px;
         height: 45px;
